--- a/wdk7-samples/toaster/kmdf/toaster.htm
+++ b/wdk7-samples/toaster/kmdf/toaster.htm
@@ -354,7 +354,7 @@ version shows how to register for PNP and Power events, handle create &amp;
 close file requests, handle WMI set and query events, fire WMI notification
 events. This driver is functionally equivalent to the feature2 version of
 toaster WDM driver present in the DDK<br>
-(src\general\toaster\func\featured2). By being a power policy owner, it also
+(src\general\toaster\wdm\func\featured2). By being a power policy owner, it also
 registers for idle notification so it can put the device to low power state
 when there is no I/O activity.</span></p>
 
