--- a/wdk7-samples/osrusbfx2/kmdf/osrusbfx2.htm
+++ b/wdk7-samples/osrusbfx2/kmdf/osrusbfx2.htm
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 12 (filtered)">
 <title>OSRUSBFX2</title>
 <style>
@@ -144,7 +144,7 @@ the overview of the device:</span></b></p>
      Endpoints are configured for loopback: </span></li>
  <ul style='margin-top:0in' type=circle>
   <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>Device
-      moves data from IN endpoint to OUT endpoint</span></li>
+      moves data from IN endpoint to OUT endpoint</span> (IN/OUT è¯´åäº†!)</li>
   <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>Device
       does not change the values of the data it receives nor does it internally
       create any data</span></li>
@@ -164,7 +164,7 @@ the overview of the device:</span></b></p>
    <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>Failure
        to start the OSR device on a USB 1.1 controller</span></li>
    <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>Invocation
-       of the “reenumerate device” IOCTL</span></li>
+       of the â€œreenumerate deviceâ€ IOCTL</span></li>
   </ul>
   <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>There
       are read/write start/stop events that can be used to measure the time
@@ -284,12 +284,12 @@ the sample</span></h3>
 
 <p><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>To build
 the sample drivers and exe, you must first set up the DDK environment on your
-host machine. The “Installation and Release Notes” in the Windows
+host machine. The â€œInstallation and Release Notesâ€ in the Windows
 2000/XP/Server 2003 DDK has a complete description on how to do this. </span></p>
 
 <ol style='margin-top:0in' start=1 type=1>
  <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>Run
-     the build –ceZ command in the osrusbfx2\kmdf directory to build <i>osrusbfx2.sys</i>
+     the build â€“ceZ command in the osrusbfx2\kmdf directory to build <i>osrusbfx2.sys</i>
      and <i>osrusbfx2.exe</i>. The target driver name for all the steps is
      same. So depending which step you want to test, you can copy the <i>osrusbfx2.sys
      </i>from the build output directory.</span></li>
@@ -340,10 +340,10 @@ Windows XP and later:</span></b></p>
      the event logging information with the system:</span></li>
  <ul style='margin-top:0in' type=circle>
   <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>On
-      Vista and later run “wevtutil im osrusbfx2.man” from an elevated command
+      Vista and later run â€œwevtutil im osrusbfx2.manâ€ from an elevated command
       line</span></li>
   <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>On
-      XP and Server 2003 run “mofcomp osrusbfx2.mof” from an administrator
+      XP and Server 2003 run â€œmofcomp osrusbfx2.mofâ€ from an administrator
       command line.</span></li>
   <li class=MsoNormal><span style='font-size:10.0pt;font-family:"Verdana","sans-serif"'>Both
       the .man and .mof files can be found in the build output directory along
@@ -590,9 +590,9 @@ font-weight:normal'>wevtutil im osrusbfx2.man</span></h3>
 <h3><span style='font-size:10.0pt;font-family:"Verdana","sans-serif";
 font-weight:normal'>Registering the manifest will set up the appropriate paths
 where the system can find information for decoding the events.&nbsp; The OSR
-event log can be found in the system event viewer under “Event
+event log can be found in the system event viewer under â€œEvent
 Viewer\Applications and Services Logs\OSRUSBFx2\Operational channel
-eventlog”.&nbsp; &nbsp;Triggering a <a href="#_Reset_and_Reenumerate">device
+eventlogâ€.&nbsp; &nbsp;Triggering a <a href="#_Reset_and_Reenumerate">device
 reenumeration</a> through osrusbfx2.exe will send an event to this log.</span></h3>
 
 <h3><span style='font-size:10.0pt;font-family:"Verdana","sans-serif";
@@ -625,7 +625,7 @@ font-weight:normal'>logman start sample -o osrusbfx2.etl -ets -p OSRUSBFX2</span
 
 <h3 style='text-indent:.5in'><span style='font-size:10.0pt;font-family:"Verdana","sans-serif";
 font-weight:normal'>Generate some activity like:</span> <span style='font-size:
-10.0pt;font-family:"Verdana","sans-serif";font-weight:normal'>osrusbfx2.exe –a</span>
+10.0pt;font-family:"Verdana","sans-serif";font-weight:normal'>osrusbfx2.exe â€“a</span>
 <span style='font-size:10.0pt;font-family:"Verdana","sans-serif";font-weight:
 normal'>&nbsp;</span></h3>
 
@@ -652,7 +652,7 @@ font-weight:normal'>xperf -start sample -f osrusbfx2.etl -on OSRUSBFX2</span></h
 
 <h3 style='text-indent:.5in'><span style='font-size:10.0pt;font-family:"Verdana","sans-serif";
 font-weight:normal'>Generate some activity like:</span> <span style='font-size:
-10.0pt;font-family:"Verdana","sans-serif";font-weight:normal'>osrusbfx2.exe –a</span>
+10.0pt;font-family:"Verdana","sans-serif";font-weight:normal'>osrusbfx2.exe â€“a</span>
 <span style='font-size:10.0pt;font-family:"Verdana","sans-serif";font-weight:
 normal'>&nbsp;</span></h3>
 
